--- a/SBIED/Lecture1/lesson1.qmd
+++ b/SBIED/Lecture1/lesson1.qmd
@@ -2,12 +2,8 @@
 title: >
   Lesson 1: Introduction to Simulation-based Inference for Epidemiological Dynamics
 author:
-  - Aaron A. King
-  - Edward L. Ionides
-  - Translated to pypomp by Kunyang He
-
-shortauthor: "King & Ionides et al."   
-shorttitle: "Lesson 1"  
+  - "Aaron A. King and Edward L. Ionides \\newline "
+  - "Translated to pypomp by Kunyang He"
 date: "July 23, 2025"
 
 bibliography: ../sbied.bib             
@@ -15,22 +11,22 @@ bibliography: ../sbied.bib
 format:
   beamer:
     code-block-font-size: \tiny                    
-    theme: AnnArbor
-    colortheme: default
     fontsize: 11pt
     cite-method: natbib
     biblio-style: apalike
-    toc: true  
-    slide-level: 3
-    highlight-style: tango  
-  
+    toc: false  
+    slide-level: 2
+    header-includes: |
+      \setbeamertemplate{footline}[page number]
+    output-file: slides.pdf
   pdf:
     documentclass: article          
     fontsize: 11pt
     cite-method: natbib           
     biblio-style: apalike
-    toc: true
+    toc: false
     geometry: margin=1in
+    output-file: notes.pdf
     
 jupyter: python3 
 
@@ -54,34 +50,38 @@ header-includes: |
 ---
 
 
-# Introduction
-
 ## Objectives for this lesson
 - To understand the motivations for simulation‑based inference in the study of epidemiological and ecological systems.
+
 - To introduce the class of partially observed Markov process (POMP) models.
+
 - To introduce the `pypomp` Python package.
 
-This is a Python-`pypomp` version of the R-`pomp` [SBIED](https://kingaa.github.io/sbied/) course. 
-The main difference, apart from choice of language, is that `pypomp` permits the use of graphical processing unit (GPU) hardware and supports methods requiring automatic differentiation.
+- An [R-`pomp` version of this course](ttps://kingaa.github.io/sbied) is available.
+
+- `pypomp` supports graphical processing unit (GPU) hardware and automatic differentiation.
 
 
-## What makes epidemiological inference hard?
+## Why is epidemiological and ecological inference hard?
 
-### Epidemiological and Ecological Dynamics
-- Ecological systems are **complex, open, nonlinear, and non‑stationary**.
-- “Laws of Nature” are unavailable except in the most general form.
-- It is useful to model them as **stochastic systems**.
-- For any observable phenomenon, **multiple competing explanations** are possible.
-- **Central scientific goals**  
-  - Which explanations are most favored by the data?  
-  - Which kinds of data are most informative?
-- **Central applied goals**  
-  - How to design ecological or epidemiological intervention?  
-  - How to make accurate forecasts?
+- **Complex, open, nonlinear, and non‑stationary systems:**\
+  Precise “laws of nature” are unavailable.\
+  It is useful to model them as stochastic processes.\
+  Multiple competing explanations** are possible.
+
+- **Central scientific goals:**\
+  Which explanations are most favored by the data?\
+  Which kinds of data are most informative?
+
+- **Central applied goals:**\
+  How to design ecological or epidemiological intervention?\
+  How to make accurate forecasts?
+
 - **Time series** are particularly useful sources of data.
 
 
-### Obstacles to inference
+## Obstacles to inference
+
 *Obstacles for **ecological** modeling and inference via nonlinear mechanistic models enumerated by* [@Bjornstad2001]:
 
 1. Combining measurement noise and process noise.  
@@ -96,10 +96,7 @@ The same issues arise for **epidemiological** modeling and inference via nonline
 The *partially observed Markov process* (POMP) modeling framework we focus on in this course addresses most of these problems effectively.
 
 
-
-## Course overview
-
-### Course objectives
+## Course objectives
 1. To show how stochastic dynamical systems models can be used as scientific instruments.  
 2. To teach statistically and computationally efficient approaches for performing scientific inference using POMP models.  
 3. To give students the ability to formulate models of their own.  
@@ -109,7 +106,7 @@ The *partially observed Markov process* (POMP) modeling framework we focus on in
 
 
 
-### Questions and answers {.allowframebreaks}
+## Questions and answers {.allowframebreaks}
 
 1. [How does one combine various data types to quantify asymptomatic COVID‑19 infections?](https://doi.org/10.1073/pnas.2019716118) [@Subramanian2021]  
 2. [How effective have various non‑pharmaceutical interventions been at controlling SARS‑CoV‑2 spread in hospitals?](https://doi.org/10.3201/eid2807.212339) [@Shirreff2022]  
@@ -126,21 +123,19 @@ The *partially observed Markov process* (POMP) modeling framework we focus on in
 13. [Can hydrology explain the seasonality of cholera?](https://doi.org/10.1016/j.advwatres.2016.11.012) [@Baracchini2017]  
 14. [What roles are played by asymptomatic infection and waning immunity in cholera epidemics?](https://doi.org/10.1038/nature07084) [@King2008]  
 
+## Partially observed Markov process (POMP) models
 
-# Partially observed Markov processes
+Data $y^*_1,\dots,y^*_N$ collected at times $t_1<\dots<t_N$ are modeled as noisy, incomplete, and indirect observations of a Markov process $\{X(t), t\ge t_0\}$.
+This is a **partially observed Markov process (POMP) model**, also known as a **hidden Markov model** or a **state space model**.
 
-## Mathematical definitions
-
-### Partially observed Markov process (POMP) models 
-- Data $y^*_1,\dots,y^*_N$ collected at times $t_1<\dots<t_N$ are modeled as noisy, incomplete, and indirect observations of a Markov process $\{X(t), t\ge t_0\}$.
-- This is a partially observed Markov process (POMP) model, also known as a hidden Markov model or a state space model.
 - $\{X(t)\}$ is Markov if the history of the process, $\{X(s), s\le t\}$, is uninformative about the future of the process, $\{X(s), s\ge t\}$, given the current value of the process, $X(t)$.
 - If all quantities important for the dynamics of the system are placed in the _state_, $X(t)$, then the Markov property holds by construction.
 - Systems with delays can usually be rewritten as Markovian systems, at least approximately.
 - An important special case: any system of differential equations $dx/dt=f(x)$ is Markovian.
-- POMP models can include all the features desired by \cite{Bjornstad2001}.
 
-### Schematic of the structure of a POMP
+POMP models can include all the features desired by \cite{Bjornstad2001}.
+
+## Schematic of the structure of a POMP
 - Arrows in the following diagram show causal relations.
 - A key perspective to keep in mind is that _the model is to be viewed as the process that generated the data_.
 - That is: the data are viewed as one realization of the model's stochastic process.
@@ -148,7 +143,7 @@ The *partially observed Markov process* (POMP) modeling framework we focus on in
 ![Schematic of the structure of a POMP](pomp_schematic1.png){height=4cm fig-cap="Schematic of the structure of a POMP" fig-alt="Diagram of POMP structure"}
 
 
-### Notation for POMP models
+## Notation for POMP models
 - Write $X_n=X(t_n)$ and $X_{0:N}=(X_0,\dots,X_N)$. Let $Y_n$ be a random variable modeling the observation at time $t_n$.
 - The one-step transition density, $f_{X_n|X_{n-1}}(x_n|x_{n-1};\theta)$, together with the measurement density, $f_{Y_n|X_n}(y_n|x_n;\theta)$ and the initial density, $f_{X_0}(x_0;\theta)$, specify the entire POMP model.
 - The joint density $f_{X_{0:N},Y_{1:N}}(x_{0:N},y_{1:N};\theta)$ can be written as  
@@ -161,7 +156,7 @@ The *partially observed Markov process* (POMP) modeling framework we focus on in
   $$
 
 
-### Another POMP model schematic
+## Another POMP model schematic
 
 \begin{figure}[htbp]     
   \centering             
@@ -258,39 +253,51 @@ The *partially observed Markov process* (POMP) modeling framework we focus on in
     =f_{Y_n|X_{n}}(y_n|x_n), \quad\text{for $n=1,\dots,N$}.
   $$
 
-## From math to algorithms
+## From math to algorithms for POMP models
 
-### Moving from math to algorithms for POMP models
 We specify some _basic model components_ which can be used within algorithms:
 
-- `rprocess`: a draw from $f_{X_n|X_{n-1}}(x_n| x_{n-1};\theta)$  
-- `dprocess`: evaluation of $f_{X_n|X_{n-1}}(x_n| x_{n-1};\theta)$  
-- `rmeasure`: a draw from $f_{Y_n|X_n}(y_n| x_n;\theta)$  
-- `dmeasure`: evaluation of $f_{Y_n|X_n}(y_n| x_n;\theta)$  
-- `rinit`: a draw from $f_{X_0}(x_0;\theta)$  
+`rprocess`: a draw from $f_{X_n|X_{n-1}}(x_n| x_{n-1};\theta)$  
+
+`dprocess`: evaluation of $f_{X_n|X_{n-1}}(x_n| x_{n-1};\theta)$  
+
+`rmeasure`: a draw from $f_{Y_n|X_n}(y_n| x_n;\theta)$  
+
+`dmeasure`: evaluation of $f_{Y_n|X_n}(y_n| x_n;\theta)$  
+
+`rinit`: a draw from $f_{X_0}(x_0;\theta)$  
 
 These basic model components define the specific POMP model under consideration.
 
 
 
-### What is a simulation-based method?
-- Simulating random processes is often much easier than evaluating their transition probabilities.  
+## What is a simulation-based method?
+
+- Simulating random processes is often much easier than evaluating their transition probabilities. 
+
 - In other words, we may be able to write rprocess but not dprocess.  
+
 -  __Simulation-based__ methods require the user to specify rprocess but not dprocess.  
+
 -  _Plug-and-play_, _likelihood-free_ and _equation-free_ are alternative terms for _simulation-based_.
+
 - Much development of simulation-based statistical methodology has occurred in the past decade.  
 
 
 ## The pypomp package
 
 - `pypomp` is a Python framework for building, simulating and fitting partially observed Markov process (POMP) models \citep{abkemeier25}.
+
 - `pypomp` builds methodology for POMP models in terms of arbitrary user-specified POMP models.  
+
 - `pypomp` provides tools, documentation, and examples to help users specify POMP models.  
+
 - `pypomp` provides a platform for modification and sharing of models, data-analysis workflows, and methodological development.  
+
 - `pypomp` is built on JAX for just‑in‑time compilation, automatic differentiation (AD) and CPU/GPU/TPU execution.
 
 
-### Structure of the pypomp package
+## Structure of the pypomp package
 Suppose `pp` is a pypomp representation of a POMP model built by the `Pomp` constructor,
 ```{python}
 #| eval: false
@@ -303,17 +310,22 @@ It is useful to divide the `pypomp` package functionality into different levels:
 - Inference algorithms: parameter estimation, model selection and diagnostics
 
 
-### Basic model components
-Basic model components are user-specified methods belonging to `pp` that perform the elementary computations that specify a POMP model.  
-There are five of these:
+## Basic model components
+Basic model components are user-specified methods belonging to `pp` that perform the elementary computations that specify a POMP model. There are five of these:
 
-- `rinit`: simulator for the initial-state distribution, i.e., the distribution of the latent state at time $t_0$.  
-- `rprocess`: simulator for the process model.  
-- `rmeasure` and `dmeasure`: simulator and density evaluation procedure, respectively, for the measurement model.  
-- `par_trans`: parameter transformations.  
+**`rinit`**: simulator for the initial-state distribution, i.e., the distribution of the latent state at time $t_0$.  
+
+**`rproc`**: simulator for the process model.  
+
+**`rmeas`** and **`dmeas`**: simulator and density evaluation procedure, respectively, for the measurement model.  
+
+**`par_trans`**: parameter transformations.  
 
 The scientist must specify whichever basic model components are required for the algorithms that the scientist uses. 
+
+<!---
 Future pypomp algorithms may implement `dprocess` (transition density for the process model) and `rprior`, `dprior` to represent Bayesian prior belief.
+--->
 
 <!---
 
@@ -322,12 +334,16 @@ Future pypomp algorithms may implement `dprocess` (transition density for the pr
 - `skeleton`: evaluation of a deterministic skeleton.  
 --->
 
-### Classes for basic model components
+## Classes for basic model components
 
 - `pp.rinit` has class `RInit`
+
 - `pp.dmeas` has class `DMeas`
+
 - `pp.rmeas` has class `RMeas`
+
 - `pp.rproc` has class `RProc`
+
 - `pp.par_trans` has class `ParTrans`
 
 These methods are not vectorized, i.e., they evaluate the model properties for a single realization of the model.
@@ -335,7 +351,7 @@ These methods are not vectorized, i.e., they evaluate the model properties for a
 They are designed to be vectorized via a call to JAX `vmap`, and this happens internally in pypomp methods. 
 
 
-### Elementary POMP algorithms
+## Elementary POMP algorithms
 These are algorithms that interrogate the model or the model/data confrontation without attempting to estimate parameters.  
 There are currently two of these:
 
@@ -349,7 +365,7 @@ Two more in R-pomp that could be included, but are less used:
 --->
 
 
-### POMP inference algorithms  
+## POMP inference algorithms  
 These are procedures that build on the elementary algorithms and are used for estimation of parameters and other inferential tasks.  
 There are currently three of these:
 
@@ -371,13 +387,16 @@ There are currently three of these:
 \emph{Objective function methods}: among the estimation algorithms just listed, four are methods that construct stateful objective functions that can be optimized using general-purpose numerical optimization algorithms such as \code{optim}, \code{subplex}, or the optimizers in the \pkg{nloptr} package.
 --->
 
-### Examples of POMP models in pypomp
+## Examples of POMP models in pypomp
 
 -  Four example constructor functions returning `Pomp` objects.
 
 - `pypomp.dacca`: The historical Dacca cholera data with the model of @King2008
+
 - `pypomp.LG`: A linear Gaussian example for validating Monte Carlo methods against exact Kalman filter calculations
+
 - `pypomp.measles.measlesPomp.UKMeasles`: Pre-vaccination meases in England and Wales with the model of @He2010
+
 - `pypomp.spx`:  A stochastic volatility model for the S&P 500 stock market index.
 
 
