more lec1 edits

--- a/SBIED/sbied.bib
+++ b/SBIED/sbied.bib
@@ -1,3 +1,11 @@
+@article{abkemeier25,
+  title={pypomp: Inference for partially observed Markov process models in
+Python with JAX},
+  author={Aaron J. Abkemeier et al},
+  year={2025},
+  journal={TBD}
+}
+
 @InCollection{Dennis2004,
   author       = {Dennis, Brian},
   title        = {Statistics and the Scientific Method in Ecology},
